Link to GraphViz

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@ ul.task-list li input[type="checkbox"] {
 <section id="learning-quarto" class="level2">
 <h2 class="anchored" data-anchor-id="learning-quarto">Learning Quarto</h2>
 <p>Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <a href="https://quarto.org" class="uri">https://quarto.org</a>.</p>
+<ul>
+<li><a href="notebook/graphviz.html">GraphViz</a></li>
+</ul>
 </section>
 
 </main>
