--- a/presentation/sandbox.html
+++ b/presentation/sandbox.html
@@ -493,6 +493,93 @@ Dave Tang
 </div>
 </div>
 </section>
+<section id="element-matching-2" class="slide level2" data-auto-animate="true" data-auto-animate-easing="ease-in-out">
+<h2 data-id="quarto-animate-title">Element matching</h2>
+<div class="r-hstack">
+<div data-id="box1" data-auto-animate-delay="0" style="background: #2780e3; width: 200px; height: 150px; margin: 10px;">
+
+</div>
+<div data-id="box2" data-auto-animate-delay="0.1" style="background: #3fb618; width: 200px; height: 150px; margin: 10px;">
+
+</div>
+<div data-id="box3" data-auto-animate-delay="0.2" style="background: #e83e8c; width: 200px; height: 150px; margin: 10px;">
+
+</div>
+</div>
+</section>
+<section id="decomposition" class="slide level2" data-auto-animate="true" data-auto-animate-easing="ease-in-out">
+<h2 data-id="quarto-animate-title">Decomposition</h2>
+<div class="r-stack">
+<div data-id="step1" style="background: #000000; width: 400px; height: 400px; border-radius: 0px;">
+
+</div>
+<div data-id="step2" style="background: #000000; width: 400px; height: 400px; border-radius: 0px;">
+
+</div>
+<div data-id="step3" style="background: #000000; width: 400px; height: 400px; border-radius: 0px;">
+
+</div>
+</div>
+</section>
+<section id="decomposition-1" class="slide level2" data-auto-animate="true" data-auto-animate-easing="ease-in-out">
+<h2 data-id="quarto-animate-title">Decomposition</h2>
+<div class="r-hstack">
+<div data-id="step1" data-auto-animate-delay="0" style="background: #2780e3; width: 200px; height: 150px; margin: 10px;">
+
+</div>
+<div data-id="step2" data-auto-animate-delay="0.1" style="background: #3fb618; width: 200px; height: 150px; margin: 10px;">
+
+</div>
+<div data-id="step3" data-auto-animate-delay="0.2" style="background: #e83e8c; width: 200px; height: 150px; margin: 10px;">
+
+</div>
+</div>
+</section>
+<section id="decomposition-2" class="slide level2" data-auto-animate="true" data-auto-animate-easing="ease-in-out">
+<h2 data-id="quarto-animate-title">Decomposition</h2>
+<div data-id="step1" data-auto-animate-delay="0" style="background: #2780e3; width: 200px; height: 150px; margin: 10px; position: absolute; right: 0; left: 0; top: 15%; margin: auto">
+
+</div>
+<div data-id="step2" data-auto-animate-delay="0.1" style="background: #3fb618; width: 200px; height: 150px; margin: 10px; position: absolute; right: 0; left: 0; top: 0; bottom: 0; margin: auto">
+
+</div>
+<div data-id="step3" data-auto-animate-delay="0.2" style="background: #e83e8c; width: 200px; height: 150px; margin: 10px; position: absolute; right: 0; left: 0; bottom: 15%; margin: auto">
+
+</div>
+</section>
+<section id="decomposition-3" class="slide level2" data-auto-animate="true" data-auto-animate-easing="ease-in-out">
+<h2 data-id="quarto-animate-title">Decomposition</h2>
+<div data-id="step1" data-auto-animate-delay="0" style="background: #2780e3; width: 200px; height: 150px; margin: 10px; position: absolute; right: 0; left: 0; top: 15%; margin: auto">
+
+</div>
+<div data-id="step2" data-auto-animate-delay="0.1" style="background: #3fb618; width: 200px; height: 150px; margin: 10px; position: absolute; right: 0; left: 0; top: 0; bottom: 0; margin: auto">
+
+</div>
+<div data-id="step3" data-auto-animate-delay="0.2" style="background: #e83e8c; width: 200px; height: 150px; margin: 10px; position: absolute; right: 0; left: 0; bottom: 15%; margin: auto">
+
+</div>
+<div data-id="box" data-auto-animate-delay="0.3" style="background: transparent; border: 2px solid #000000; width: 90%; height: 80%; margin: auto; position: absolute; top: 10%; right: 5%; bottom: 10%; left: 5%">
+
+</div>
+</section>
+<section id="decomposition-4" class="slide level2" data-auto-animate="true" data-auto-animate-easing="ease-in-out">
+<h2 data-id="quarto-animate-title">Decomposition</h2>
+<div data-id="step1" data-auto-animate-delay="0" style="background: #2780e3; width: 200px; height: 150px; margin: 10px; position: absolute; right: 0; left: 0; top: 15%; margin: auto">
+
+</div>
+<div data-id="step2" data-auto-animate-delay="0.1" style="background: #3fb618; width: 200px; height: 150px; margin: 10px; position: absolute; right: 0; left: 0; top: 0; bottom: 0; margin: auto">
+
+</div>
+<div data-id="step3" data-auto-animate-delay="0.2" style="background: #e83e8c; width: 200px; height: 150px; margin: 10px; position: absolute; right: 30%; bottom: 15%; margin: auto">
+
+</div>
+<div data-id="step3" data-auto-animate-delay="0.2" style="background: #e83e8c; width: 200px; height: 150px; margin: 10px; position: absolute; left: 30%; bottom: 15%; margin: auto">
+
+</div>
+<div data-id="box" data-auto-animate-delay="0.3" style="background: transparent; border: 2px solid #000000; width: 90%; height: 80%; margin: auto; position: absolute; top: 10%; right: 5%; bottom: 10%; left: 5%">
+
+</div>
+</section>
 <section id="fragments" class="slide level2">
 <h2>Fragments</h2>
 <div class="fragment">
