Quick demo of Quarto extensions

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="presentations" class="level2">
 <h2 class="anchored" data-anchor-id="presentations">Presentations</h2>
 <ul>
+<li><a href="presentation/extensions.html">Extensions</a></li>
 <li><a href="presentation/features.html">Features</a></li>
 <li><a href="presentation/sandbox.html">Sandbox</a></li>
 </ul>
