Improve the layout of index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Home</title>
+<title>Learning Quarto</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -39,20 +39,21 @@ ul.task-list li input[type="checkbox"] {
 
 </head>
 
-<body class="fullcontent quarto-light">
+<body class="quarto-light">
 
-<div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
+<div id="quarto-content" class="page-columns page-rows-contents page-layout-full">
 
-<main class="content" id="quarto-document-content">
+<main class="content page-columns page-full column-body" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Home</h1>
+<h1 class="title">Learning Quarto</h1>
+<p class="subtitle lead">Notebooks and presentations for learning <a href="https://quarto.org">Quarto</a></p>
 </div>
 
 
 
-<div class="quarto-title-meta">
+<div class="quarto-title-meta column-body">
 
     
   
@@ -64,27 +65,76 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="learning-quarto" class="level2">
-<h2 class="anchored" data-anchor-id="learning-quarto">Learning Quarto</h2>
-<p>Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <a href="https://quarto.org" class="uri">https://quarto.org</a>.</p>
+<div class="column-page">
+<div class="columns">
+<div class="column" style="width:50%;">
+<section id="notebooks" class="level3">
+<h3 class="anchored" data-anchor-id="notebooks">Notebooks</h3>
+<table class="caption-top table">
+<thead>
+<tr class="header">
+<th></th>
+<th>Topic</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>1</td>
+<td><a href="notebook/hello.html">Hello, Quarto</a></td>
+<td>Getting started with Quarto basics</td>
+</tr>
+<tr class="even">
+<td>2</td>
+<td><a href="notebook/graphviz.html">Graphviz</a></td>
+<td>Creating diagrams with Graphviz</td>
+</tr>
+<tr class="odd">
+<td>3</td>
+<td><a href="notebook/authoring.html">Authoring</a></td>
+<td>Markdown authoring and housing prices</td>
+</tr>
+<tr class="even">
+<td>4</td>
+<td><a href="notebook/computations.html">Computations</a></td>
+<td>Executable code and computation options</td>
+</tr>
+</tbody>
+</table>
 </section>
-<section id="notebooks" class="level2">
-<h2 class="anchored" data-anchor-id="notebooks">Notebooks</h2>
-<ul>
-<li><a href="notebook/hello.html">Hello World</a></li>
-<li><a href="notebook/graphviz.html">GraphViz</a></li>
-<li><a href="notebook/authoring.html">Authoring</a></li>
-<li><a href="notebook/computations.html">Computations</a></li>
-</ul>
+</div><div class="column" style="width:50%;">
+<section id="presentations" class="level3">
+<h3 class="anchored" data-anchor-id="presentations">Presentations</h3>
+<table class="caption-top table">
+<thead>
+<tr class="header">
+<th></th>
+<th>Topic</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>1</td>
+<td><a href="presentation/extensions.html">Extensions</a></td>
+<td>Some useful Quarto extensions</td>
+</tr>
+<tr class="even">
+<td>2</td>
+<td><a href="presentation/features.html">Features</a></td>
+<td>RevealJS presentation features</td>
+</tr>
+<tr class="odd">
+<td>3</td>
+<td><a href="presentation/sandbox.html">Sandbox</a></td>
+<td>Experimental slides and testing</td>
+</tr>
+</tbody>
+</table>
 </section>
-<section id="presentations" class="level2">
-<h2 class="anchored" data-anchor-id="presentations">Presentations</h2>
-<ul>
-<li><a href="presentation/extensions.html">Extensions</a></li>
-<li><a href="presentation/features.html">Features</a></li>
-<li><a href="presentation/sandbox.html">Sandbox</a></li>
-</ul>
-</section>
+</div>
+</div>
+</div>
 
 </main>
 <!-- /main column -->
