Clean Theme demo

--- a/index.html
+++ b/index.html
@@ -116,16 +116,21 @@ ul.task-list li input[type="checkbox"] {
 <tbody>
 <tr class="odd">
 <td>1</td>
-<td><a href="presentation/extensions.html">Extensions</a></td>
-<td>Some useful Quarto extensions</td>
+<td><a href="presentation/clean_theme.html">Clean Theme</a></td>
+<td>Minimalist academic presentation theme</td>
 </tr>
 <tr class="even">
 <td>2</td>
-<td><a href="presentation/features.html">Features</a></td>
-<td>RevealJS presentation features</td>
+<td><a href="presentation/extensions.html">Extensions</a></td>
+<td>Some useful Quarto extensions</td>
 </tr>
 <tr class="odd">
 <td>3</td>
+<td><a href="presentation/features.html">Features</a></td>
+<td>RevealJS presentation features</td>
+</tr>
+<tr class="even">
+<td>4</td>
 <td><a href="presentation/sandbox.html">Sandbox</a></td>
 <td>Experimental slides and testing</td>
 </tr>
