Scientific production in the era of Large Language Models

--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 <tr class="even">
 <td>4</td>
+<td><a href="presentation/journal_club_llm_science.html">LLMs &amp; Science</a></td>
+<td>Journal club: LLMs and scientific production</td>
+</tr>
+<tr class="odd">
+<td>5</td>
 <td><a href="presentation/sandbox.html">Sandbox</a></td>
 <td>Experimental slides and testing</td>
 </tr>
