A Comparative Study of Statistical Methods for Identifying Differentially Expressed Genes in Spatial Transcriptomics

--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 <tr class="odd">
 <td>5</td>
+<td><a href="presentation/journal_club_spatial_deg.html">Spatial DEG Methods</a></td>
+<td>Journal club: DEG methods in spatial transcriptomics</td>
+</tr>
+<tr class="even">
+<td>6</td>
 <td><a href="presentation/sandbox.html">Sandbox</a></td>
 <td>Experimental slides and testing</td>
 </tr>
