Confronting false discoveries in single-cell differential expression

--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 <tr class="even">
 <td>6</td>
+<td><a href="presentation/journal_club_scde.html">scRNA-seq DE</a></td>
+<td>Journal club: false discoveries in single-cell DE</td>
+</tr>
+<tr class="odd">
+<td>7</td>
 <td><a href="presentation/sandbox.html">Sandbox</a></td>
 <td>Experimental slides and testing</td>
 </tr>
